# ansa-api-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
demo/: create_rbe2.py  delete_shells.py  renumber_elements.py  renumber_properties.py
demo/.claude/: settings.local.json
tests/: test_e2e.py  test_generate_index.py  test_generate_keywords.py  test_mcp_server.py  test_parse_html.py
tools/: __main__.py  generate_index.py  generate_keywords.py  mcp_server.py
